--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pysws"
+name = "random_structure_generator"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,4 +10,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.17.1", features = ["extension-module"] }
-smiles_with_selectors = { version = "0.1.0", path = "../sws" }
+rand = "0.8.5"
+smiles_with_selectors = { version = "0.1.0", path = "./sws" }
