--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - master
   pull_request:
 
 jobs:
@@ -12,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodule: recursive
     - uses: messense/maturin-action@v1
       with:
         manylinux: auto
@@ -27,6 +28,8 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodule: recursive
     - uses: messense/maturin-action@v1
       with:
         command: build
@@ -41,6 +44,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodule: recursive
     - uses: messense/maturin-action@v1
       with:
         command: build
